--- a/views/searchResult.handlebars
+++ b/views/searchResult.handlebars
@@ -14,7 +14,11 @@
 <div class="row d-flex justify-content-center">
     {{#if event}}
     {{#each event}}
+    {{#if (compare creator_id ../user.id)}}
+    <div class="card col-12 col-md-5 my-3 mx-3 p-2 cust-card cust-public">
+    {{else}}
     <div class="card col-12 col-md-5 my-3 mx-3 p-2 cust-card">
+    {{/if}}
         <img src={{picture_path}} class="card-img-top img-fluid" width="500" height="360" alt={{picture_path}}>
         <div class="card-body">
             <h2 class="card-title  mt-2 mb-3 text-center">{{event_name}}</h2>
