--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="d-grid gap-2 my-3">
-                    <button type="button" class="btn btn-dark" id="newEventSubmit">Submit</button>
+                    <button type="button" class="btn btn-dark cust-btn" id="newEventSubmit">Submit</button>
                 </div>
             </form>
         </div>
