--- a/views/searchResult.handlebars
+++ b/views/searchResult.handlebars
@@ -15,9 +15,9 @@
     {{#if event}}
     {{#each event}}
     {{#if (compare creator_id ../user.id)}}
-    <div class="card col-12 col-md-5 my-3 mx-3 p-2 cust-card cust-public">
-    {{else}}
     <div class="card col-12 col-md-5 my-3 mx-3 p-2 cust-card">
+    {{else}}
+    <div class="card col-12 col-md-5 my-3 mx-3 p-2 cust-card cust-public">
     {{/if}}
         <img src={{picture_path}} class="card-img-top img-fluid" width="500" height="360" alt={{picture_path}}>
         <div class="card-body">
@@ -28,7 +28,7 @@
                     target="_blank">{{location}}<br>{{city}}, {{state}}</a>
             </div>
             <div class="d-grid gap-2 mt-3 mb-1">
-                <a class="btn btn-dark" href="/eventbyid/{{id}}">Event Details</a>
+                <a class="btn btn-dark cust-btn" href="/eventbyid/{{id}}">Event Details</a>
             </div>
         </div>
     </div>
