--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,10 @@ body {
     display: block;
 }
 
+.cursor-hand {
+    cursor: pointer;
+}
+
 #upload_widget {
     background-color: var(--publicGreen);
     color: var(--mainGreen);
