--- a/views/eventbyid.handlebars
+++ b/views/eventbyid.handlebars
@@ -61,7 +61,7 @@
             </div>
             <div class="row my-5 d-flex flex-wrap justify-content-around">
                 <h2 class="text-center mb-3">Attendees</h2>
-                <div class="col px-3 mx-2 text-center border py-3" id="noRes" value={{id}}>
+                <div class="col px-3 mx-2 text-center border py-3 {{#if user.isRSVP}}cursor-hand{{/if}}" id="noRes" value={{id}}>
                     <h5>No Response</h5>
                     <ul class="list-group list-group-flush">
                         {{#each noresponses}}
@@ -69,7 +69,7 @@
                         {{/each}}
                     </ul>
                 </div>
-                <div class="col px-3 mx-2 text-center border py-3" id="attend">
+                <div class="col px-3 mx-2 text-center border py-3 {{#if user.isRSVP}}cursor-hand{{/if}}" id="attend">
                     <h5>Attending</h5>
                     <ul class="list-group list-group-flush">
                         {{#each yeses}}
@@ -77,7 +77,7 @@
                         {{/each}}
                     </ul>
                 </div>
-                <div class="col px-3 mx-2 text-center border py-3" id="maybe">
+                <div class="col px-3 mx-2 text-center border py-3 {{#if user.isRSVP}}cursor-hand{{/if}}" id="maybe">
                     <h5>Maybe</h5>
                     <ul class="list-group list-group-flush">
                         {{#each maybes}}
@@ -85,7 +85,7 @@
                         {{/each}}
                     </ul>
                 </div>
-                <div class="col px-3 mx-2 text-center border py-3" id="decline">
+                <div class="col px-3 mx-2 text-center border py-3 {{#if user.isRSVP}}cursor-hand{{/if}}" id="decline">
                     <h5>Declined</h5>
                     <ul class="list-group list-group-flush">
                         {{#each noes}}
