line up buttons

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -142,7 +142,9 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="d-grid gap-2 mb-3">
                     <a href="/profile/invite/{{id}}" class="cust-btn btn btn-dark m-1">Invite People</a>
+                    </div>
                 </div>
             </div>
         </div>
