--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -154,7 +154,11 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="invitedEvents">Event Invites</h1>
     {{#each invitedEvents as |event|}}
-    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target">
+    {{#if (compare creator_id ../user.id)}}
+    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target cust-created">
+    {{else}}
+    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target"></div>
+    {{/if}}
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
             <hr>
