delete extra tag

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -157,7 +157,7 @@
     {{#if (compare creator_id ../user.id)}}
     <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target cust-created">
     {{else}}
-    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target"></div>
+    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target">
     {{/if}}
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
