--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -154,13 +154,14 @@
 <div class="row d-flex justify-content-center mt-5">
     <h1 class="mb-4 text-center" id="invitedEvents">Event Invites</h1>
     {{#each invitedEvents as |event|}}
-    {{#if (compare creator_id ../user.id)}}
-    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target cust-created">
+    {{#if (compare attendees.0.attendee.rsvp_status 0)}}
+    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target cust-public">
     {{else}}
     <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target">
     {{/if}}
         <div class="card-body">
             <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
+            <h2>{{attendees.0.attendee.rsvp_status}}</h2>
             <hr>
             <img src={{picture_path}} class="card-img-top img-fluid" width="500" height="360" alt={{picture_path}}>
             <hr>
