--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -259,7 +259,7 @@
                     </div>
                     <div class="col">
                         <div class="d-grid gap-2 my-3">
-                            <button class="btn btn-danger m-1 deleteBtn" value={{event.id}}>Delete Event</button>
+                            <button class="btn btn-danger m-1 deleteBtn" value={{id}}>Delete Event</button>
                         </div>
                     </div>
                 </div>
