--- a/views/searchResult.handlebars
+++ b/views/searchResult.handlebars
@@ -1,7 +1,7 @@
 {{!-- search page --}}
 <div class="row">
     <div class="col">
-        <h2>Upcoming Events in: {{user.searchTerm}}</h2>
+        <h2>Upcoming Events in: {{searchTerm}}</h2>
     </div>
     <div class="col d-flex justify-content-end">
         <form class="d-inline-flex">
