--- a/views/changepassword.handlebars
+++ b/views/changepassword.handlebars
@@ -17,7 +17,7 @@
                     <label for="floatingPassword">Retype New Password</label>
                 </div>
                 <div class="d-grid gap-2 my-3">
-                    <button class="btn btn-dark" id="newPassBtn" value={{user.id}}>Change Password</button>
+                    <button class="cust-btn btn btn-dark" id="newPassBtn" value={{user.id}}>Change Password</button>
 
                 </div>
                 <div class="d-grid gap-2 my-3">
