--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="d-grid gap-2 my-3">
-                    <button class="btn btn-dark" id="loginBtn">Log In</button>
+                    <button class="cust-btn btn btn-dark" id="loginBtn">Log In</button>
                 </div>
             </form>
         </div>
