--- a/views/searchResult.handlebars
+++ b/views/searchResult.handlebars
@@ -6,7 +6,7 @@
     <div class="col d-flex justify-content-end">
         <form class="d-inline-flex">
             <input type="search" class="form-control m-2" placeholder="Seattle, WA" id="searchInput">
-            <button class="btn btn-dark my-2" type="submit" id="searchBtn">Search</button>
+            <button class="cust-btn btn btn-dark my-2" type="submit" id="searchBtn">Search</button>
         </form>
     </div>
 </div>
