--- a/views/updateEvent.handlebars
+++ b/views/updateEvent.handlebars
@@ -25,7 +25,7 @@
                     <img id="uploadedimage" src={{eventUpdate.picture_path}} width="500"></img>
                 </div>
                 <div class="mb-3">
-                    <button for="formFile" id="upload_widget" class="form-label, cloudinary-button">Upload
+                    <button for="formFile" id="upload_widget" class="cust-btn form-label, cloudinary-button">Upload
                         Image</button>
                 </div>
 
