attn color for event invites

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
     --mainTaupe: #dad7cd;
     --lightTaupe: #dad7cd63;
     --ownedColor: #BCBD8B;
-    --attnColor: rgb(243, 215, 215);
+    --attnColor: #d3d0f15f;
 }
 
 body {
