--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -52,7 +52,7 @@
             </div>
             <div class="hover-show">
                 <div class="row">
-                    <div class="col border m-2 p-2">
+                    <div class="col border border-secondary m-2 p-2">
                         <h5>Backpack:</h5>
                         <ul>
                             {{#each items}}
@@ -60,7 +60,7 @@
                             {{/each}}
                         </ul>
                     </div>
-                    <div class="col border m-2 p-2">
+                    <div class="col border border-secondary m-2 p-2">
                         <h5>Attendees:</h5>
                         <ul>
                             {{#each yeses}}
@@ -127,7 +127,7 @@
             </div>
             <div class="hover-show">
                 <div class="row">
-                    <div class="col border m-2 p-2">
+                    <div class="col border border-secondary m-2 p-2">
                         <h5>Backpack:</h5>
                         <ul>
                             {{#each items}}
@@ -135,7 +135,7 @@
                             {{/each}}
                         </ul>
                     </div>
-                    <div class="col border m-2 p-2">
+                    <div class="col border border-secondary m-2 p-2">
                         <h5>Attendees:</h5>
                         <ul>
                             {{#each yeses}}
@@ -178,9 +178,9 @@
     {{/unless}}
     {{#each invitedEvents as |event|}}
     {{#if (compare attendees.0.attendee.rsvp_status 0)}}
-    <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target cust-attn">
+    <div class="cust-card-inv card col-12 col-lg-5 mb-3 mx-3 hover-target cust-attn">
         {{else}}
-        <div class="cust-card card col-12 col-lg-5 mb-3 mx-3 hover-target">
+        <div class="cust-card-inv card col-12 col-lg-5 mb-3 mx-3 hover-target">
             {{/if}}
             <div class="card-body">
                 <h2 class="card-title my-4 text-center">{{event.event_name}}</h2>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="hover-show">
                     <div class="row">
-                        <div class="col border m-2 p-2">
+                        <div class="col border border-secondary m-2 p-2">
                             <h5>Backpack:</h5>
                             <ul>
                                 {{#each items}}
@@ -214,7 +214,7 @@
                                 {{/each}}
                             </ul>
                         </div>
-                        <div class="col border m-2 p-2">
+                        <div class="col border border-secondary m-2 p-2">
                             <h5>Attendees:</h5>
                             <ul>
                                 {{#each yeses}}
