--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
     </div>
     <div class="col-12 col-md-6 d-flex justify-content-end" id="custom-search">
         <form class="d-inline-flex">
-            <input type="search" class="form-control m-2" placeholder="Location" id="searchInput">
+            <input type="search" class="form-control m-2" placeholder="Seattle, WA" id="searchInput">
             <button class="btn btn-dark my-2 cust-btn" type="submit" id="searchBtn">Search</button>
         </form>
     </div>
