--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,8 +17,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark custom-nav">
             <div class="container-fluid px-4 py-1 d-flex" id="custom-navbar">
                 <div>
-                    <img class="img-fluid" src="/images/BYOB_Logo_Crop.png" alt="Bring Your Own Backpack Logo"
-                        id="byob-logo">
+                    <img class="img-fluid cursor-hand" src="/images/BYOB_Logo_Crop.png"
+                        alt="Bring Your Own Backpack Logo" id="byob-logo">
                 </div>
                 <ul class="navbar-nav" id="custom-navlinks">
                     <li class="nav-item">
@@ -31,7 +31,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile
                             {{#if user.noti}}
-                            <i class="bi bi-bell-fill link-danger position-relative" data-bs-toggle="tooltip" data-bs-placement="left" title="Invites to respond to">
+                            <i class="bi bi-bell-fill link-danger position-relative" data-bs-toggle="tooltip"
+                                data-bs-placement="left" title="Invites to respond to">
                                 <span
                                     class='position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary'>
                                     {{user.noti}}
@@ -63,6 +64,7 @@
     <footer>
 
     </footer>
+    <script src="/js/logo.js"></script>
 </body>
 
 </html>
