--- a/views/invite.handlebars
+++ b/views/invite.handlebars
@@ -7,7 +7,7 @@
 </div>
 <hr>
 <div class="row d-flex justify-content-center">
-    <div class="col-4">
+    <div class="col-sm-8 col-lg-4">
         {{#each users}}
         {{#unless isInvited}}
         <ul class="list-group list-group-horizontal">
