--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,8 +2,7 @@
 <div class="row">
     <div class="col-12 col-md-6" id="cust-upcoming">
         <h1>Upcoming Events</h1>
-        <h1>{{dateTime}}</h1>
-        <h1>{{isoString}}</h1>
+        <h1>{{format_time newDate}}</h1>
     </div>
     <div class="col-12 col-md-6 d-flex justify-content-end" id="custom-search">
         <form class="d-inline-flex">
