--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,6 +2,8 @@
 <div class="row">
     <div class="col-12 col-md-6" id="cust-upcoming">
         <h1>Upcoming Events</h1>
+        <h1>{{format_time today}}</h1>
+        <h1>{{offset}}</h1>
         <h1>{{format_time dateTime}}</h1>
     </div>
     <div class="col-12 col-md-6 d-flex justify-content-end" id="custom-search">
