add bottom margin

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,13 +57,10 @@
         </nav>
     </header>
 
-    <main class="container container-fluid mt-5">
+    <main class="container container-fluid mt-5 mb-5">
         {{{body}}}
     </main>
 
-    <footer>
-
-    </footer>
     <script src="/js/logo.js"></script>
 </body>
 
